POR/RefEdge/src/objects/Label__c.object
<CustomObject>
    <description>An object that contains the various  Labels.</description>
    <fields>
        <fullName>Adv_Routing_Group__c</fullName>
        <label>Advanced Routing Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BasicSearchView__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Basic Search View</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filter_RefSearch_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Search Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Filter_no__c</fullName>
        <label>Filter no</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nomination_Filter_Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ref_Limit_to_Acct_or_Cntct__c</fullName>
        <description>limits the display of the Filter on the Nomination and Reference Profile creation forms.</description>
        <inlineHelpText>Limits the display of the Filter on the Nomination and Reference Profile creation forms.</inlineHelpText>
        <label>Limit to Account or Contact</label>
        <picklist>
            <picklistValues>
                <fullName>Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Required_in_P2P__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Required in P2P is used in conjunction with Show in P2P, this setting indicates that this Filter is a required selection for EVERY P2P request.</description>
        <inlineHelpText>Required in P2P is used in conjunction with Show in P2P, this setting indicates that this Filter is a required selection for EVERY P2P request.</inlineHelpText>
        <label>Required in P2P</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_in_P2P__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show in P2P indicates that this Filter should be shown when at least one of the Accounts is a P2P Account.</description>
        <inlineHelpText>Show in P2P indicates that this Filter should be shown when at least one of the Accounts is a P2P Account.</inlineHelpText>
        <label>Show in P2P</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Visible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Nomination Visible</label>
        <type>Checkbox</type>
    </fields>
    <label>Filter</label>
    <nameField>
        <label>Label Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Filters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>